--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".ForgotPassword"/>
 
         <activity android:name=".SettingActivity"/>
+        <activity android:name=".BuyActivity"/>
 
     </application>
 
