Added Buttons and Completed Home Fragment 12.04.2020-01:27

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
 
         <activity android:name=".SettingActivity"/>
         <activity android:name=".BuyActivity"/>
+        <activity android:name=".BookList"/>
 
     </application>
 
