Added Buttons and Completed Home Fragment 12.04.2020-01:27`

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
         <activity android:name=".SettingActivity"/>
         <activity android:name=".BuyActivity"/>
         <activity android:name=".BookList"/>
+        <activity android:name=".sellbooks.SellActivity"
+            android:theme="@style/Theme.AppCompat"/>
+        <activity android:name=".sellbooks.UploadimageActivity"
+            android:theme="@style/Theme.AppCompat"/>
+        <activity android:name=".sellbooks.PreviewAd"
+            android:theme="@style/Theme.AppCompat"/>
 
     </application>
 
